@@ -1,5 +1,10 @@
 2004-08-05  Paolo Borelli  <pborelli@katamail.com>
 
+	* gedit-mdi.c: use document_get_deleted instead of
+	open coding it. Spotted by Vinay M R.
+
+2004-08-05  Paolo Borelli  <pborelli@katamail.com>
+
 	* dialogs/gedit-close-confirmatoion-dialog.c: 
 	s/definitively/permanently.
 
